--- a/junos-ex/netbox-junos-ex-template.j2
+++ b/junos-ex/netbox-junos-ex-template.j2
@@ -139,6 +139,7 @@ virtual-chassis {
                         {%- endfor %}
                         priority {{ gr.priority }};
                         accept-data;
+                        no-preempt;
                     }
                     {%- endfor %}
                 }
