Minor updates to junos-ex-template

--- a/junos-ex/netbox-junos-ex-template.j2
+++ b/junos-ex/netbox-junos-ex-template.j2
@@ -139,7 +139,9 @@ virtual-chassis {
                         {%- endfor %}
                         priority {{ gr.priority }};
                         accept-data;
-                        no-preempt;
+                        preempt {
+                            hold-time 180;
+                        }
                     }
                     {%- endfor %}
                 }
