Repository structure refactoring

--- a/junos/templates/nb-test-junos-template.j2
+++ b/junos/templates/nb-test-junos-template.j2
@@ -26,7 +26,7 @@ system {
         encrypted-password "{{ device.cf.root_password }}";
     }
     login {
-        idle-timeout {{ device.cf.idle_timeout | string }};
+        idle-timeout {{ login_idle_timeout }};
     }
     services {
         ssh {
