Updates to junos-ex-template

--- a/junos/templates/nb-junos-ex-template.j2
+++ b/junos/templates/nb-junos-ex-template.j2
@@ -459,6 +459,7 @@ protocols {
     }
     {%- endif %}
 }
+{%- endif %}
 {#- **************************************************
 ###                VRF configuration             ###
 **************************************************#}
